<resources>
    <string name="app_name">Rango Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="blank"> </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ensure">确定</string>
    <string name="copy">复制</string>
    <string name="main_set">主控制设置</string>
    <string name="share_device">分享设备</string>
    <string name="clock_setting">时钟设置</string>
    <string name="time_task">定时任务</string>
    <string name="device_state">设备状态</string>
    <string name="normal_problem">常见问题</string>
    <string name="about_us">关乎我们</string>
    <string name="equipment_title">设备</string>
    <string name="intelligence_title">智能</string>
    <string name="live_action_title">实景</string>
    <string name="temperature">温度</string>
    <string name="city">城市</string>
    <string name="weather">天气</string>
    <string name="outdoor_air">室外空气</string>
    <string name="addroom">添加房间</string>
    <string name="confirm">确定</string>
    <string name="select_establish_room">选择你要创建的房间</string>
    <string name="add_room">+ 添加房间</string>
    <string name="custom_house_type">自定义户型</string>
    <string name="cope_and_paste">复制粘贴</string>
    <string name="delete">删除</string>
    <string name="ground_floor">一层</string>
    <string name="new_construction">+新建</string>
    <string name="roomName">XX房间</string>
    <string name="city_Name">宁波市·慈溪市</string>
    <string name="weather_Name">小雨</string>
    <string name="air_qualaity_Name">室外空气 优</string>
    <string name="addRoom">添加房间</string>
    <string name="merge">合并</string>
    <string name="resolution">拆分</string>
    <string name="sure">确定</string>
    <string name="cusromroom_text">卧室</string>
    <string name="Room">房间</string>
    <string name="scene">场景</string>
    <string name="onefloor">一层</string>
    <string name="secondfloor">二层</string>
    <string name="thirdfloor">三层</string>
    <string name="fourfloor">四层</string>
    <string name="key">按钮</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="add_home">+创建新家</string>
    <string name="cancle">取消</string>
    <string name="temp">温度</string>
    <string name="add">添加</string>
    <string name="current">当前</string>
    <string name="set">设定</string>
    <string name="clock_set">时钟设置</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限></string>
    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="add_equipment">添加设备</string>
    <string name="rooms_type">房间类型</string>
    <string name="create_home">创建新家</string>
    <string name="home_manager">家的管理</string>
    <string name="add_device">+添加设备</string>
    <string name="modify_device_name">修改设备名</string>
    <string name="finish">完成</string>
    <string name="update_home">修改住所</string>
    <string name="update_home_name">修改住所名称</string>
    <string name="app_version">v0.3.4.6</string>
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="spinnerTaskResultCountTitle">Task result count</string>
    <string name="btnConfirmTitle">Confirm</string>
    <string name="decorate">装饰</string>
    <string name="change_scene">换景</string>
    <string name="device_name">设备名称:</string>
    <string name="hint">温馨提示!</string>
    <string name="scan_text">放入框内,自动扫描</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="location">请打开定位权限</string>
    <string name="camer">请打开相机权限</string>
</resources>
