<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/central_background"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="6">
        <Button
            android:id="@+id/add_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:padding="0dp"
            android:background="@drawable/addroom_button"
            android:text="@string/add_room" />
        <Button
            android:id="@+id/custom_house_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:background="@drawable/addroom_button"
            android:text="@string/custom_house_type" />
        <Button
            android:id="@+id/copy_and_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:background="@drawable/addroom_button"
            android:layout_weight="1"
            android:text="@string/cope_and_paste" />
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/read"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>