<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">


    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/btn1"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:text="@string/onefloor"
            android:textColor="@color/floor_button"
            android:background="@drawable/floor_frame_colour"
            app:layout_constraintStart_toEndOf="@+id/room"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:text="@string/secondfloor"
            android:textColor="@color/floor_button"
            android:background="@drawable/floor_frame_colour"
            app:layout_constraintStart_toEndOf="@+id/room"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/btn3"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:text="@string/thirdfloor"
            android:textColor="@color/floor_button"
            android:background="@drawable/floor_frame_colour"
            app:layout_constraintStart_toEndOf="@+id/room"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/btn4"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:text="@string/fourfloor"
            android:textSize="15sp"
            android:textColor="@color/floor_button"
            android:background="@drawable/floor_frame_colour"
            app:layout_constraintStart_toEndOf="@+id/room"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/new_btn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:text="@string/new_construction"
            android:textColor="@color/floor_button"
            android:background="@drawable/floor_frame_colour"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>


</LinearLayout>