<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/tab1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/equipment_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/intelligence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/intelligence_title"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/live_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/live_action_title"/>
    </LinearLayout>
</LinearLayout>