<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/include"
        layout="@layout/custom_house_title"></include>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/include"
        android:background="@color/Line" />
    <ScrollView
        android:id="@+id/sl"
        android:layout_below="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <com.xinrui.smart.view_custom.MyGridView
            android:id="@+id/customRooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="0dp"
            android:numColumns="4"
            android:verticalSpacing="0dp">
        </com.xinrui.smart.view_custom.MyGridView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lal"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/custom_house_background"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center">
            <Button
                android:id="@+id/merge"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/merge"/>
            <Button
                android:id="@+id/resolution"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/resolution"/>
            <Button
                android:id="@+id/sure"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/sure"/>
        </LinearLayout>
        </LinearLayout>

</RelativeLayout>