<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:context=".smart.activity.DeviceListActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:scaleType="centerInside"
                android:layout_marginLeft="@dimen/dp_6"
                android:layout_centerVertical="true"
                 />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:textColor="@color/color_white"
                android:text="办公室" />

            <ImageView
                android:id="@+id/image_home"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/example"
                android:layout_marginRight="@dimen/dp_6"
                />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/linearout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="9"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_share_device"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_40"
                    android:text="@string/share_device"
                    android:background="@drawable/shape_white_button"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_black"
                    />
                <Button
                    android:id="@+id/btn_clock_setting"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_40"
                    android:text="@string/clock_setting"
                    android:background="@drawable/shape_white_button"
                    android:layout_toRightOf="@+id/btn_share_device"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:textColor="@color/color_black"
                    />
                <Button
                    android:id="@+id/btn_time_task"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_40"
                    android:text="@string/clock_setting"
                    android:background="@drawable/shape_white_button"
                    android:layout_toRightOf="@+id/btn_clock_setting"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:textColor="@color/color_black"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                >
                <Button
                    android:id="@+id/btn_device_state"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_40"
                    android:text="@string/device_state"
                    android:background="@drawable/shape_white_button"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_black"
                    />
                <Button
                    android:id="@+id/btn_normal_problem"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_40"
                    android:text="@string/normal_problem"
                    android:background="@drawable/shape_white_button"
                    android:layout_toRightOf="@+id/btn_device_state"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:textColor="@color/color_black"
                    />
                <Button
                    android:id="@+id/btn_about_us"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_40"
                    android:text="@string/about_us"
                    android:background="@drawable/shape_white_button"
                    android:layout_toRightOf="@+id/btn_normal_problem"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:textColor="@color/color_black"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
